fix table css in dark mode

--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -35,17 +35,6 @@ html {
   --scrollbar-track-color: #fafafa;
   --scrollbar-handle-color: #c1c1c1;
   --scrollbar-handle-hover-color: #7d7d7d;
-
-  .table {
-    --bs-table-bg: rgb(0 0 0 / 0%);
-    --bs-table-accent-bg: rgb(0 0 0 / 0%);
-    --bs-table-striped-color: #212529;
-    --bs-table-striped-bg: rgb(0 0 0 / 5%);
-    --bs-table-active-color: #212529;
-    --bs-table-active-bg: rgb(0 0 0 / 10%);
-    --bs-table-hover-color: #212529;
-    --bs-table-hover-bg: rgb(0 0 0 / 7.5%);
-  }
 }
 
 html.dark {
@@ -77,6 +66,7 @@ html.dark {
   }
 
   .table {
+    --bs-table-color-state: #fff;
     --bs-table-bg: #2d333b;
     --bs-table-striped-bg: #22272e;
     --bs-table-striped-color: #fff;
@@ -84,9 +74,7 @@ html.dark {
     --bs-table-active-color: #fff;
     --bs-table-hover-bg: #323539;
     --bs-table-hover-color: #fff;
-
-    color: #fff;
-    border-color: #373b3e;
+    --bs-table-border-color: #373b3e;
   }
 
   .card {
